fixed some FindBugs errors